--- a/scss/_foundationsettings.scss
+++ b/scss/_foundationsettings.scss
@@ -664,7 +664,7 @@ $h6-font-reduction: 0 !default;
 // $input-error-message-font-color-alt: $oil;
 
 // We use this to style the glowing effect of inputs when focused
-// $input-include-glowing-effect: true;
+$input-include-glowing-effect: false;
 // $glowing-effect-fade-time: 0.45s;
 // $glowing-effect-color: $input-focus-border-color;
 
