fixed help style

--- a/scss/app.scss
+++ b/scss/app.scss
@@ -223,6 +223,10 @@ small.error, small.help {
     color: $black;
 }
 
+small.help {
+    padding: 0.375rem 0.5625rem 0.5625rem 0.5625rem;
+}
+
 
 
 /*  ==================================================
