add writing style guide link

--- a/scss/app.scss
+++ b/scss/app.scss
@@ -323,6 +323,22 @@ Needs to be corrected to not use inline-flex (not supported in Safari)
     }
 }
 
+/*  ==================================================
+    Lists
+    ==================================================  */
+
+// .list {
+//     margin-left: 3rem;
+// }
+//
+// .sublist {
+//     list-style-type: none;
+//
+//     &li {
+//         margin-left: 2rem;
+//     }
+// }
+
 
 /*  ==================================================
     Specific Styles for the Style Guide page only
